# CafeteriaDB

./: .gitignore  CMakeLists.txt  README.md
data/: nombres.json
include/: Cafeteria.hpp  Cliente.hpp  Empleado.hpp  Factura.hpp  Ingrediente.hpp  Inventario.hpp  Maquina.hpp  Mesa.hpp  Pedido.hpp  Producto.h  Proveedor.hpp  Turno.hpp  empleado.hpp
include/libs/: Persona.hpp
src/: Cafeteria.cpp  Cliente.cpp  Empleado.cpp  Factura.cpp  Ingrediente.cpp  Inventario.cpp  Maquina.cpp  Mesa.cpp  Pedido.cpp  Producto.cpp  Proveedor.cpp  Turno.cpp  empleado.cpp  main.cpp
src/libs/: Persona.cpp
